--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
                 
                 <h5 class="card-title">Empfehlungen</h5>
                 <p class="card-text">Hier erhälst du Tipps wie du das Schimmelrisiko minimieren kannst</p>
-                <a href="/Empfehlung.html" class="btn btn-primary">Empfehlungen</a>
+                <a href="/Empfehlungen.html" class="btn btn-primary">Empfehlungen</a>
               </div>
               <div class="card-footer">
                
