--- a/public/Empfehlungen.html
+++ b/public/Empfehlungen.html
@@ -47,7 +47,7 @@
 
         <!-- Hummidity-text  Aktueller Hummidity Level als Text -->
         <p id="HummidityDay">...</p>   
-        <button onclick="getHumDay()">Tages-Durchschnitt Abrufen</button> 
+        <button onclick="getHumDay()">Tages-Durchschnitt abrufen</button> 
        
  <!-- Durchschnittlicher Temperature Level als Progressbar -->
  <h2 class="mt-5">Temperatur  (Tages-Durchschnitt)</h2>
@@ -57,7 +57,7 @@
 
 <!-- Temperature-text  durchschnittlich Temperature Level als Text -->
 <p id="TemperatureDay">...</p>
-<button onclick="getTempDay()">Tages-Durchschnitt Abrufen</button>
+<button onclick="getTempDay()">Tages-Durchschnitt abrufen</button>
 
  <!--Analyse -->
  <h2 class="mt-5">Analyse</h2>
@@ -66,6 +66,8 @@
 <!-- Empfehlung-->
  <h2 class="mt-5">Empfehlung</h2>
 <p id="Empfehlung-text">Warte auf Empfehlung...</p>   
+<button onclick="getRisikoTyp()">Analyse & Empfehlungen abrufen</button>
+
 
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
