--- a/public/hummidity.html
+++ b/public/hummidity.html
@@ -45,8 +45,8 @@
 
         <!-- aktueller Hummidity Level als Text -->
         <p id="Hummidity-text">Warte auf erste Messung...</p>
-        <button onclick="getHumMinute()">Get Humidity now</button> 
-        <h2 class="mt-5">Feuchtigkeit  (Durchschnitt/letzte Stunde)</h2>
+        <button onclick="getHumMinute()">Aktuelle Feuchtigkeit abrufen</button> 
+        <h2 class="mt-5">Feuchtigkeit  (Stunden-Durchschnitt)</h2>
 
         <!-- Durchschnittlicher Hummidity Level als Progressbar -->
         <div class="progress">
@@ -55,7 +55,7 @@
 
         <!-- Hummidity-text  Aktueller Hummidity Level als Text -->
         <p id="Hummidity-average-text">Warte auf erste Messung...</p>  
-        <button onclick="getHum()">Get Humidity</button>   
+        <button onclick="getHum()">Feuchtigkeit Durchschnitt abrufen</button>   
         <h2 class="mt-5">Feuchtigkeits Level (Verlauf)</h2>
 
         <!-- Verlauf Hummidity Level als Chart -->
